# OptiFolio

./: .env.example  .gitignore  CLAUDE.md  README.md  all_files.txt  app.py  benchmark.py  grep_results.txt  main.py  pyproject.toml  requirements.txt  sync_boc_data.py  sync_bosc_data.py  sync_icbc_data.py  test_fastapi.py  test_portfolio_optimization.py
.playwright-mcp/: page-2026-06-04T06-58-53-729Z.yml  page-2026-06-04T06-59-17-871Z.yml  page-2026-06-04T06-59-30-343Z.yml  page-2026-06-04T07-00-03-254Z.yml  page-2026-06-04T08-06-23-918Z.yml  page-2026-06-04T08-14-39-097Z.yml  page-2026-06-04T08-14-54-467Z.yml  page-2026-06-04T08-30-22-344Z.yml  page-2026-06-04T08-31-29-432Z.yml  page-2026-06-04T08-33-55-651Z.yml  page-2026-06-04T08-34-09-769Z.yml  page-2026-06-04T08-34-16-297Z.yml  page-2026-06-04T08-35-07-270Z.yml  page-2026-06-04T08-40-24-613Z.yml  page-2026-06-04T08-40-44-926Z.yml  page-2026-06-04T08-43-43-348Z.yml  page-2026-06-04T13-41-39-371Z.yml  page-2026-06-04T13-44-39-723Z.yml  page-2026-06-04T13-46-04-539Z.yml  page-2026-06-04T13-46-13-428Z.yml  page-2026-06-04T13-46-42-752Z.yml  page-2026-06-04T13-46-51-551Z.yml  page-2026-06-04T13-47-32-307Z.yml  page-2026-06-04T13-48-05-740Z.yml  page-2026-06-04T14-31-33-430Z.yml  page-2026-06-04T14-32-14-386Z.yml  page-2026-06-04T14-32-37-767Z.yml  page-2026-06-04T14-38-24-584Z.yml  page-2026-06-04T14-56-45-525Z.yml  page-2026-06-04T15-16-43-029Z.yml  page-2026-06-04T15-18-11-376Z.yml  page-2026-06-04T15-19-04-968Z.yml  page-2026-06-04T15-20-04-138Z.yml  page-2026-06-04T15-41-35-113Z.yml  page-2026-06-18T13-20-57-534Z.yml  page-2026-06-18T13-21-24-379Z.yml  page-2026-06-18T13-21-43-952Z.yml  page-2026-06-18T13-22-06-761Z.yml  page-2026-06-18T13-23-14-526Z.yml  page-2026-06-18T13-23-25-781Z.yml  (+44 more)
.pytest_tmp/: test_boc_fetcher_discoverycurrent  test_bootstrap_creates_local_rcurrent  test_bosc_fetcher_synccurrent  test_data_loader_fetches_diffecurrent  test_icbc_fetcher_sync_defaultcurrent  test_ingestion_adapter_saves_tcurrent  test_market_data_repository_sacurrent  test_portfolio_core_loads_env_current  test_portfolio_path_can_be_ovecurrent
.pytest_tmp_ds001/: test_construct_does_not_createcurrent  test_corrupt_version_raises_oncurrent  test_creates_database_and_parecurrent  test_custom_path_acceptedcurrent  test_double_initialize_is_idemcurrent  test_equal_version_acceptedcurrent  test_foreign_keys_enabledcurrent  test_higher_version_rejectedcurrent  (+4 more)
docs/: JULES.md  (+47 more)
(+525 files in other folders)
