[project]
name = "optifolio"
version = "0.2.0"
description = "Quantitative finance project for asset pricing and optimization"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # 核心金融数据
    "akshare>=1.18.0",
    "yfinance>=1.4.0",
    "ccxt>=4.5.0",

    # 数据科学和数学
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "cvxpy>=1.5.0",

    # 数据可视化
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",

    # Web框架和API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",

    # 配置和数据处理
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "duckdb>=1.4.0",
    "pandera>=0.20.0",
    "vectorbt>=1.0.0",
    "PyPortfolioOpt>=1.6.0",

    # 缓存
    "cachetools>=5.3.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
]

solvers = [
    "ecos>=2.0.10",
    "scs>=3.2.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "detect-secrets>=1.5.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
